# wix-builder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/wix_builder/: cli.py  names.py  template.py
